# SCE-IT-Portfolio-Management-Tool

./: .gitignore  ARCHITECTURE.md  Dockerfile.api  Dockerfile.web  README.md  SCE_IT_Portfolio_Tool_BUILD_PROMPT.md  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-pages.yml  deploy.yml
api/: README.md  pyproject.toml
api/src/: main.py
api/src/adapters/: base.py  daptiv.py  umt360.py
api/src/analytics/: __init__.py  metrics.py
api/src/ppt/: build_deck.py
api/src/prioritization/: service.py  similarity.py
api/src/src/adapters/: __init__.py  daptiv.py  umt360.py
api/src/src/analytics/: __init__.py  metrics.py
api/src/src/ppt/: build_deck.py
api/src/src/prioritization/: service.py  similarity.py
api/tests/: test_analytics.py  test_prioritization.py
docs/: data-model.md  prioritization.md  slide-spec.md
docs/connectors/: daptiv.md  umt360.md
infrastructure/: README.md
scripts/: generate_snapshot.py
weather-dashboard/: README.md  index.html  styles.css
weather-dashboard/js/: api.js  app.js  storage.js  ui.js  weatherCodes.js
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/sample/: seed-data.xlsx  snapshot.json
web/src/: App.tsx  app.js  index.css  styles.css
web/src/components/ui/: index.ts
web/src/lib/: analytics.js  normalize.js  pptExport.js
web/src/pages/: DecisionsOffsets.tsx  FundingGapAnalysis.tsx  InitiativesRegister.tsx  PortfolioOverview.tsx  Prioritization.tsx  ValueStreamDetail.tsx
web/src/styles/: tokens.css
web/src/types/: model.ts
(+94 files in other folders)
