[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sce-it-portfolio-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-pptx>=1.0.0",
  "scikit-learn>=1.5.0",
  "networkx>=3.3",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings --cov=src/prioritization --cov=src/analytics --cov-report=term-missing"
testpaths = ["tests"]
